<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/spacing_medium"
        android:paddingLeft="@dimen/spacing_medium"
        android:paddingTop="@dimen/spacing_medium"
        android:paddingEnd="@dimen/spacing_medium"
        android:paddingRight="@dimen/spacing_medium"
        android:paddingBottom="@dimen/spacing_medium">

        <TextView
            android:id="@+id/help_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            style="@style/AppTheme.HelperText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/help_intro" />

        <TextView
            style="@style/AppTheme.SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/help_contact_section" />

        <Button
            android:id="@+id/help_bot"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/help_bot_label" />

        <Button
            android:id="@+id/help_channel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/help_channel_label" />

        <Button
            android:id="@+id/help_email"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/help_email_label" />

        <Button
            android:id="@+id/help_website"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/help_web_label" />

    </LinearLayout>
</ScrollView>
